refactor: discord webhook messages add env var to role id